--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 
     <body>
         <h1>AJ Hagemann</h1>
+
+        <h3> Elkhorn Nebraksa</h3>
+
+        <p><b>I love this place beacuse it is my home town</b>, where i grew up. All my family is there and i love to visit them while im in town. It also has one of the <b>best ice cream</b> shops in omaha.</p>
     </body>
+
 </html>
