--- a/index.html
+++ b/index.html
@@ -16,6 +16,28 @@
 
         <h3>Route to the best place in the world</h3>
 
-        
+        <ol>
+            <li>Start out going north on N Main St/US-71 Bus N toward E 2nd St. Continue to follow US-71 Bus N.</il>
+            <li>Turn left onto US Highway 71/US-71 N/US-136 W.</il>
+            <li>Turn left onto US Highway 71/US-71 N/US-136 W.</il>
+            <li>Turn left onto S 10Th St/US-59 S/US-136 W. Continue to follow US-136 W.</il>
+            <li>Merge onto I-29 N toward Hamburg IA (Crossing into Iowa).</il>
+            <ul>
+                <il>There is an amazing bar in hamburg with amazing hot dogs</il>
+            </ul>
+            <li>Merge onto I-80 (EXPRESS) W via the exit on the left</il>
+            <li>I-80 (EXPRESS) W becomes I-80 W (Crossing into Nebraska).</il>
+                <ol>
+                    <li>Merge onto I-680 N via EXIT 446.</il>
+                    <li>Merge onto W Dodge Rd/US-6 W via EXIT 3 toward Boys Town.</il>
+                </ol>
+            <li>Merge onto NE-31 N toward Elkhorn.</il>
+            <li>Turn left onto Rainwood Rd/County Hwy-13.</il>
+            <li>Welcome to ELKHORN, NE.</il>
+            <ul>
+                <il>There is the best ice cream in the middle of town</il>
+            </ul>
+            </ol>
+    </body>
 
 </html>
