--- a/aboutme.html
+++ b/aboutme.html
@@ -16,12 +16,14 @@
     
         <br>
 
+        <h2>Table</h2>
+
         <p> This is a graph that I made to showcase some foods I like and where to get them and how much you would pay for them. <p>
 
             <table>
             <tr>
-                <th> food/drink </th>
-                <th> location </th>
+                <th> Food/drink </th>
+                <th> Location </th>
                 <th> Cost </th>
             </tr>
             <tr>
@@ -40,6 +42,8 @@
               <td> $11.50 </td>
              </tr>
              </table>
-             
+
+             <br>
+
     </body>
 </html>
