--- a/aboutme.html
+++ b/aboutme.html
@@ -45,5 +45,22 @@
 
              <br>
 
+             <h3>Coding</h3>
+
+             <blockquote cite="https://en.wikipedia.org/wiki/Legendre%27s_formula">
+                In mathematics, Legendre's formula gives an expression for the exponent of the largest power of a prime p that divides the factorial n!. It is named after Adrien-Marie Legendre. It is also sometimes known as de Polignac's formula, after Alphonse de Polignac.
+                </blockquote>
+
+             <pre>
+                 int fact_pow (int n, int k) {
+                int res = 0;
+                while (n) {
+                    n /= k;
+                    res += n;
+                }
+                return res;
+            }
+            </pre>
+
     </body>
 </html>
