--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </ul>
             </ol>
             
-            <a href= "https://github.com/44-563-WebApps-F21/webapps-f21-assignment-3-AJ-Hagemann/blob/main/AboutMe.md" >About me page</a>
+            <a href= "https://github.com/44-563-WebApps-F21/webapps-f21-assignment-3-AJ-Hagemann/blob/main/aboutme.html" >About me page</a>
             
     </body>
 
